<resources>
    <string name="app_name">PaulApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>
</resources>
