<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ramcharitar.paul.paulapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

        <Space
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:text="@string/button1"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1" />

        <Button
            android:text="@string/button2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:id="@+id/button2" />

        <Button
            android:text="@string/button4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:id="@+id/button4" />

        <Button
            android:text="@string/button5"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:layout_columnSpan="2"
            android:id="@+id/button5" />

        <Button
            android:text="@string/button3"
            android:layout_column="2"
            android:layout_gravity="fill_vertical"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" />

</GridLayout>
